<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rfid"
            android:icon="@drawable/ic_rfid"
            android:title="@string/rfid_title" />
        <item
            android:id="@+id/nav_barcode_scan"
            android:icon="@drawable/ic_barcode_scan"
            android:title="@string/scanner_title" />
        <item
            android:id="@+id/nav_firmware_update"
            android:icon="@drawable/ic_firmware_update"
            android:title="@string/updateFirmware" />
        <item
            android:id="@+id/nav_device_discover"
            android:icon="@drawable/ic_discover_device"
            android:title="@string/title_discovery" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_action_about"
            android:title="About" />
    </group>

</menu>
